--- a/src/Components/Shared/UserCardParts/Status/Status.module.css
+++ b/src/Components/Shared/UserCardParts/Status/Status.module.css
@@ -21,7 +21,9 @@
 
 .status {
 	max-width: max-content;
+	max-height: min-content;
 
+	word-break: break-all;
 	font-size: 14px;
 	font-weight: 400;
 }
