--- a/src/Components/Me/MeInfo/MeInfo.module.css
+++ b/src/Components/Me/MeInfo/MeInfo.module.css
@@ -1,15 +1,3 @@
-/* USER INFO */
-
-.userInfo {
-	display: grid;
-
-	grid-template-columns: 150px 1fr;
-	grid-template-rows: repeat(3, min-content) 1fr;
-
-	column-gap: 20px;
-	row-gap: 12px;
-}
-
 /* PHOTO */
 .photo {
 	height: 170px;
@@ -29,4 +17,9 @@
 
 .contacts {
 	margin: 0;
+}
+
+/* CHANGE PROFILE */
+.changeProfile {
+  grid-column: 1;
 }
