--- a/src/Components/Shared/PagesList/PagesList.module.css
+++ b/src/Components/Shared/PagesList/PagesList.module.css
@@ -10,6 +10,8 @@
 /* PAGE NUMBER */
 
 .pageNumber {
+	height: min-content;
+
 	font-size: 12px;
 
 	border: 2px solid var(--blue-light);
@@ -48,7 +50,7 @@
 /* BUTTON */
 
 .button {
-	background-color: var(--white);
+	height: min-content;
 
 	padding-top: 10px;
 	padding-bottom: 10px;
@@ -57,7 +59,10 @@
 
 	font-size: 12px;
 	color: #000;
+
+	background-color: var(--white);
 	box-shadow: none;
+
 	transition: none;
 }
 
