--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,7 +1,7 @@
 .userInfo {
 	display: grid;
 	grid-template-columns: minmax(auto, 150px) 1fr;
-	grid-template-rows: repeat(2, min-content) 1fr;
+	grid-template-rows: repeat(5, max-content) 1fr;
 	column-gap: 20px;
 	row-gap: 12px;
 }
@@ -11,15 +11,16 @@
 	grid-column: 1;
 	grid-row: 1 / 3;
 
-	width: 100%;
-	height: 100%;
-	max-height: 150px;
+	width: 150px;
+	height: 150px;
 }
 
 .info {
-	grid-row: span 2;
+	grid-row: 2 / -1;
 }
 
 .button {
-	align-self: start;
+	word-break: keep-all;
+
+	text-align: center;
 }
