--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -1,4 +1,4 @@
-.chat {
+/* .chat {
 	display: grid;
 
 	grid-template-rows: min-content auto min-content;
@@ -44,4 +44,4 @@
 	color: var(--black);
 	font-size: 18px;
 	font-weight: 500;
-}
+} */
