--- a/src/pages/DialogsPage/DialogsPage.module.css
+++ b/src/pages/DialogsPage/DialogsPage.module.css
@@ -1,13 +1,9 @@
 .dialogs {
 	display: grid;
-
-	grid-template-columns: min-content 1fr;
-	grid-template-rows: min-content 1fr;
-
-	row-gap: 5px;
-	column-gap: 40px;
-
+	grid-template-columns: max-content 1fr;
+	grid-template-rows: max-content 1fr;
 	grid-auto-flow: column dense;
+	gap: 1em;
 }
 
 .heading {
@@ -15,9 +11,6 @@
 }
 
 .dialogList {
-	margin: 0;
-	margin-left: 20px;
-
 	width: 320px;
 }
 
