--- a/src/pages/dialogs/page.module.css
+++ b/src/pages/dialogs/page.module.css
@@ -1,8 +1,7 @@
 .dialogs {
 	display: grid;
 	grid-template-columns: max-content 1fr;
-	grid-template-rows: max-content 1fr;
-	grid-auto-flow: column dense;
+	grid-template-rows: repeat(2, max-content) 1fr;
 	gap: 1em;
 }
 
@@ -10,11 +9,13 @@
 	grid-column: 1;
 }
 
-.dialogList {
+.list {
 	width: 320px;
+  height: max-content;
 }
 
 .chat {
+  grid-column: 2;
 	grid-row: 1 / -1;
 
 	height: 800px;
