--- a/src/index.css
+++ b/src/index.css
@@ -45,9 +45,13 @@
 
 html {
 	scroll-behavior: smooth;
+
+	min-height: 100vh;
 }
 
 body {
+	min-height: 100vh;
+
 	margin: 0;
 
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -74,4 +78,8 @@ body {
 
 .MuiSkeleton-root {
 	transform: scale(1);
+}
+
+#root {
+  height: 100%;;
 }
