--- a/src/pages/dialogs/ui/messages-list/messages-list.module.css
+++ b/src/pages/dialogs/ui/messages-list/messages-list.module.css
@@ -4,28 +4,25 @@
 	align-items: end;
 
 	height: 100%;
-
-	background-color: var(--blue-lightest);
 }
 
 .messages {
 	display: grid;
-
-	row-gap: 10px;
+  gap: 8px;
 
 	height: min-content;
 
-	padding: 10px;
-	margin: 0;
+	padding: 2em;;
 }
 
 .message {
-	width: 400px;
+	width: clamp(200px, 50%, 500px);
 }
+
 .message:not(.myMessage)::before {
 	content: none;
 }
 
 .myMessage {
-	justify-self: end;
+	margin-left: auto;
 }
