--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,8 @@ html {
 }
 
 body {
+  display: grid;
+
 	min-height: 100vh;
 
 	margin: 0;
@@ -81,5 +83,5 @@ body {
 }
 
 #root {
-  height: 100%;;
+	height: 100%;
 }
