--- a/src/pages/dialogs/ui/chat/chat.module.css
+++ b/src/pages/dialogs/ui/chat/chat.module.css
@@ -1,8 +1,6 @@
 .chat {
 	display: grid;
-	grid-template-rows: min-content 1fr min-content;
-
-	height: 100%;
+	grid-template-rows: min-content 500px min-content;
 }
 
 .messages {
