--- a/src/pages/dialogs/ui/dialog-header/dialog-header.module.css
+++ b/src/pages/dialogs/ui/dialog-header/dialog-header.module.css
@@ -1,31 +1,19 @@
-.header {
-	/* display: flex;
-
-	align-items: center;
-
-	column-gap: 20px; */
-
+.bar {
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
 }
-/*
-.photo {
-	width: 50px;
-	height: 50px;
-} */
 
-.name {
-	font-size: 16px;
-	font-weight: 400;
-	/* color: var(--white-lighter); */
+.header {
+	display: flex;
+	align-items: center;
+	gap: 20px;
 }
 
-.name:hover {
-	text-decoration: underline;
+.info {
+	display: grid;
+	gap: 4px;
 }
 
 .date {
 	font-size: 12px;
-
-	/* color: var(--white-lighter); */
 }
