--- a/src/features/auth/login/ui/login-form.module.css
+++ b/src/features/auth/login/ui/login-form.module.css
@@ -1,7 +1,13 @@
+.title {
+	grid-column: 1 / -1;
+
+	text-align: center;
+}
+
 .form {
 	display: grid;
 	grid-template-columns: max-content auto;
-	width: 460px;
+	width: 100%;
 }
 
 .field {
