--- a/src/pages/profile/page.module.css
+++ b/src/pages/profile/page.module.css
@@ -1,23 +1,4 @@
-.profile {
+.layout {
 	display: grid;
-	row-gap: 20px;
-
-	background-color: var(--white-lighter);
-}
-
-.image {
-	min-width: 100%;
-	max-height: 150px;
-
-	color: var(--white-lighter);
-	font-size: 24px;
-	font-weight: 700;
-}
-
-.userInfo {
-	margin-bottom: 10px;
-}
-
-.posts {
-	margin-bottom: 10px;
+	gap: 16px;
 }
