--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,5 @@
-:root {
-	--white-lightest: rgb(255 255 255);
-	--white-lighter: rgb(245 245 245);
-	--white: rgb(230 230 230);
-	--grey-lighter: rgb(224 224 224);
-	--grey-light: rgb(192 192 192);
-	--grey: rgb(100 100 100);
-	--blue-lightest: rgb(212 217 255);
-	--blue-lighter: rgb(145 151 191);
-	--blue-light: rgb(80 100 220);
-	--blue: rgb(47 81 233);
-	--violet-lighter: rgb(243 184 243);
-	--violet: rgb(155 15 236);
-	--black: rgb(0 0 0);
-	--red: tomato;
-
-	--borderRadius: 15px;
-}
-
 .fake-photo {
 	display: flex;
-
 	justify-content: center;
 	align-items: center;
 
@@ -43,22 +23,21 @@
 	outline: 2px solid var(--violet);
 }
 
-html {
+.page {
 	scroll-behavior: smooth;
 
 	min-height: 100vh;
 }
 
-body {
-  display: grid;
+.page__body {
+	display: grid;
 
 	min-height: 100vh;
 
 	margin: 0;
 
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-		sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+		Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
@@ -78,10 +57,12 @@ body {
 	clip: rect(0, 0, 0, 0);
 }
 
+/* stylelint-disable */
 .MuiSkeleton-root {
 	transform: scale(1);
 }
+/* stylelint-enable */
 
-#root {
+.page__root {
 	height: 100%;
 }
