Небольшие исправления и добавления

--- a/src/app/app.module.css
+++ b/src/app/app.module.css
@@ -1,7 +1,8 @@
 .wrapper {
-	height: 100%;
-}
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
-.container {
 	height: 100%;
+	width: 100%;
 }
