--- a/src/pages/login/page.module.css
+++ b/src/pages/login/page.module.css
@@ -1,11 +1,15 @@
 .layout {
 	display: flex;
+  flex-direction: column;
 	align-items: center;
 	justify-content: center;
+  gap: 16px;
 
 	margin: 0 auto;
 }
 
+
+.alert,
 .form {
 	width: 460px;
 }
